add elastic search info
