# book/controllers/book.go
@@ -1,7 +1,9 @@
 package controllers
 
 import (
+	"encoding/json"
 	"errors"
+	es7 "github.com/elastic/go-elasticsearch/v7"
 	"github.com/gin-gonic/gin"
 	"go_practice/book/auth"
 	"go_practice/book/logger"
@@ -9,6 +11,7 @@ import (
 	"go_practice/book/structs"
 	"go_practice/book/utils"
 	"gorm.io/gorm"
+	"log"
 	"net/http"
 	"strconv"
 )
@@ -257,4 +260,34 @@ func (c *Controller) DeleteBook(context *gin.Context) {
 	}
 
 	context.JSON(http.StatusNoContent, gin.H{"data": true})
+}
+
+// GetElasticInfo godoc
+// @Summary      Get Elastic Info
+// @Description  get elastic details
+// @Tags         elastic
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  structs.ElasticJsonResponse
+// @Failure      400  {object}  structs.ErrorResponse
+// @Failure      401  {object}  structs.ErrorResponse
+// @Failure      403  {object}  structs.ErrorResponse
+// @Failure      404  {object}  structs.ErrorResponse
+// @Failure      500  {object}  structs.ErrorResponse
+// @Router       /elastic/info [get]
+// @Security BearerAuth
+func (c *Controller) GetElasticInfo(context *gin.Context) {
+	es := context.MustGet("elastic").(*es7.Client)
+	var r map[string]interface{}
+	//fmt.Println(client.Index())
+	//fmt.Println(es7.Count())
+	//log.Println(es7.Info())
+	res, err := es.Info()
+	if err != nil {
+		log.Fatalf("Error getting response: %s", err)
+	}
+	if err := json.NewDecoder(res.Body).Decode(&r); err != nil {
+		log.Fatalf("Error parsing the response body: %s", err)
+	}
+	context.JSON(http.StatusOK, gin.H{"data": r})
 }
