# book/docs/swagger.json
@@ -165,7 +165,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "get books",
+                "description": "get book",
                 "consumes": [
                     "application/json"
                 ],
@@ -175,7 +175,7 @@
                 "tags": [
                     "books"
                 ],
-                "summary": "Show Books",
+                "summary": "Show Book Details",
                 "parameters": [
                     {
                         "type": "integer",
@@ -364,6 +364,64 @@
                     }
                 }
             }
+        },
+        "/elastic/info": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "get elastic details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "elastic"
+                ],
+                "summary": "Get Elastic Info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ElasticJsonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -476,6 +534,12 @@
                 "title": {
                     "type": "string"
                 }
+            }
+        },
+        "structs.ElasticJsonResponse": {
+            "type": "object",
+            "properties": {
+                "data": {}
             }
         },
         "structs.ErrorResponse": {
